crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__simple_segments_data.snap
---
source: crates/tests/re_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┬──────────────┬────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks ┆ frame_nr:end ┆ frame_nr:start │
╞══════════════════╪═══════════════════╪══════════════════╪══════════════╪════════════════╡
│ my_segment_id1   ┆ [base]            ┆ 4                ┆ 40           ┆ 10             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id2   ┆ [base]            ┆ 2                ┆ 40           ┆ 10             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id3   ┆ [base]            ┆ 6                ┆ 40           ┆ 10             │
└──────────────────┴───────────────────┴──────────────────┴──────────────┴────────────────┘
