crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__simple_with_multiple_timelines_manifest_data.snap
---
source: crates/tests/re_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────┬───────────────────────────┬────────────────────────────────┐
│ rerun_layer_name ┆ rerun_segment_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256                      ┆ rerun_registration_status ┆ property:text_log:TextLog:text │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════╪═══════════════════════════╪════════════════════════════════╡
│ base             ┆ my_segment_id1   ┆ rrd              ┆ 4                ┆ d993555a9bb588ccebb86ba420107954c37d657… ┆ done                      ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_segment_id2   ┆ rrd              ┆ 2                ┆ d075f23341a648ded6226e82f57a43dd86f6b6b… ┆ done                      ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_segment_id3   ┆ rrd              ┆ 6                ┆ 74fd95b8600d70baa3adc1c3da240357706aa5a… ┆ done                      ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ layer_two        ┆ my_segment_id2   ┆ rrd              ┆ 4                ┆ f22e3c43fe73314b283334c1b67c23804af70dc… ┆ done                      ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ props            ┆ my_segment_id1   ┆ rrd              ┆ 1                ┆ 90433089a733d463b38411fbda5e7deb84ba382… ┆ done                      ┆ [i'm segment 1]                │
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────┴───────────────────────────┴────────────────────────────────┘
