crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__simple_with_multiple_timelines_segments_schema.snap
---
source: crates/tests/re_redap_tests/src/tests/register_segment.rs
expression: batch.format_schema_snapshot()
---
duration:end: Duration(ns) [
    rerun:index: "duration"
    rerun:index_kind: "duration"
    rerun:index_marker: "end"
    rerun:kind: "index"
]
duration:start: Duration(ns) [
    rerun:index: "duration"
    rerun:index_kind: "duration"
    rerun:index_marker: "start"
    rerun:kind: "index"
]
frame_nr:end: Int64 [
    rerun:index: "frame_nr"
    rerun:index_kind: "sequence"
    rerun:index_marker: "end"
    rerun:kind: "index"
]
frame_nr:start: Int64 [
    rerun:index: "frame_nr"
    rerun:index_kind: "sequence"
    rerun:index_marker: "start"
    rerun:kind: "index"
]
property:text_log:TextLog:text: List(Utf8) [
    rerun:archetype: "rerun.archetypes.TextLog"
    rerun:component: "TextLog:text"
    rerun:component_type: "rerun.components.Text"
    rerun:entity_path: "/__properties/text_log"
    rerun:kind: "data"
]
rerun_last_updated_at: non-null Timestamp(ns)
rerun_layer_names: non-null List(non-null Utf8)
rerun_num_chunks: non-null UInt64
rerun_segment_id: non-null Utf8
rerun_size_bytes: non-null UInt64
rerun_storage_urls: non-null List(non-null Utf8)
timestamp:end: Timestamp(ns) [
    rerun:index: "timestamp"
    rerun:index_kind: "timestamp"
    rerun:index_marker: "end"
    rerun:kind: "index"
]
timestamp:start: Timestamp(ns) [
    rerun:index: "timestamp"
    rerun:index_kind: "timestamp"
    rerun:index_marker: "start"
    rerun:kind: "index"
]
